{
    "name": "InputsController",
    "maps": [
        {
            "name": "Tank",
            "id": "bbce9841-85b2-4f2c-b107-c7aa45a89dfa",
            "actions": [
                {
                    "name": "Motion",
                    "type": "PassThrough",
                    "id": "ebca05bf-7358-4c0a-b884-cef5cc854636",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "ca4f44c4-b868-4bbd-8114-603ddfbfc4d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecundaryFire",
                    "type": "Button",
                    "id": "35a305c9-2709-4a23-89ae-7312633b5638",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eaa4eee5-bf44-4cff-80ff-690af1cf7429",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerOne",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be42d155-cf54-425d-9604-df0a179957fc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerTwo",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "3ad8ec77-8139-417d-b516-fa1c53bd3909",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "23cf742a-8d62-4eda-b91e-f446f8f61dbb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerOne",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5432e8a6-ffb7-468a-a87e-87f6c7bffd26",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerOne",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "07a065c9-5a70-4668-bfc5-639041611092",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerOne",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5835668c-d39f-48a5-a216-9cd1580c975e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerOne",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "db352fb6-5cba-4caa-baf5-5690d52a8769",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9717e013-4ede-4e02-ab88-e830c03a1c5b",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerTwo",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "03f5fe46-b81b-40b2-9cca-0f45a7e1fb54",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerTwo",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ae123828-3738-4435-9565-5f2927d376e8",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerTwo",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e56d7b01-52ce-4f90-a352-662f5081bbe5",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerTwo",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ef53eeeb-ea17-4d7d-a5aa-c4be3a527c8c",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerOne",
                    "action": "SecundaryFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e993d3b5-5dab-49ef-95f3-0a3f88740b58",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerTwo",
                    "action": "SecundaryFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Selection",
            "id": "4f7b5668-23d2-4398-ad47-2d31f08650e8",
            "actions": [
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "ce6c069f-1dab-473e-ab81-f69b6f0bf78b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "4c66f393-8203-41a2-b65b-80c8b5b215a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "071c5aea-6216-4aca-a660-69f263f3b4d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "d123c47c-6bcd-42c3-bf6c-fa728e75a8bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3756541a-2f7b-44f9-826d-53ddcca66570",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerOne",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d383a2f6-7f5c-4325-b906-fa31cd181b2a",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerTwo",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edbf2783-50fb-4821-9d7f-48558e6f09db",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerOne",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a63aaf9-a8ea-472c-bbe8-9cc3edc3509f",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerTwo",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8be0a92-5201-492d-9f65-e1cc1d688209",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerOne",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "322187ae-a6a0-4323-a6b9-ac48f371cfb6",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerTwo",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "882fed37-9ed1-47d8-9e01-a3ca7bfe8f73",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerOne",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2902ea5a-9e41-439b-8e77-381e7775467f",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerTwo",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerOne",
            "bindingGroup": "PlayerOne",
            "devices": []
        },
        {
            "name": "PlayerTwo",
            "bindingGroup": "PlayerTwo",
            "devices": []
        }
    ]
}